[package]
name = "bvh"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"
publish = false

[dependencies]
arrayvec = "0.7.4"
bitvec = "1.0.1"
glam = "0.26.0"
heapless = "0.8.0"

[lints.clippy]
complexity = "deny"

nursery = { level = "deny", priority = -1 }

pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"

[dev-dependencies]
fastrand = "2.0.2"
itertools = "0.12.1"
