[package]
name = "bvh"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"
publish = false

[dependencies]
arrayvec = "0.7.4"
bytes = "1.7.2"
fast_hilbert = "2.0.0"
glam = { version = "0.29.0" }
heapless = "0.8.0"
more-asserts = "0.3.1"

[lints.clippy]
complexity = "deny"

nursery = { level = "deny", priority = -1 }

pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"

[dev-dependencies]
fastrand = "2.0.2"
itertools = "0.13.0"
bevy = "0.14.2"
arbitrary = "1.3.2"
proptest = "1.5.0"
