[package]
name = "bvh-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.3.2", features = ["derive"] }
glam = "0.26.0"
libfuzzer-sys = "0.4"

[dependencies.bvh]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "u32_i32"
path = "fuzz_targets/u16_i16.rs"
test = false
doc = false
bench = false
